Update Website to v0.0.4 (#92)

--- a/website/index.html
+++ b/website/index.html
@@ -46,53 +46,52 @@
             <li>✅ Austria, Salzburg, 1 m</li>
             <li>✅ Austria, Oberösterreich, 0.5 m</li>
             <li>✅ Austria, Kärnten, 1 m</li>
+            <li>✅ Belgium, Flanders, 1 m</li>
+            <li>✅ Belgium, Wallonie, 1 m</li>
+            <li>✅ Czech Republic, country-wide, 5 m</li>
+            <li>✅ Denmark, country-wide, 0.5 m</li>
+            <li>✅ Estonia, country-wide, 1 m</li>
+            <li>✅ Finland, country-wide, 2 m</li>
+            <li>✅ France, partial, 1 m</li>
+            <li>✅ France, country-wide, 5 m</li>
+            <li>✅ Italy, country-wide, 10 m</li>
+            <li>✅ Italy, Bozen, 2.5 m</li>
+            <li>✅ Italy, Aosta, 0.5 m</li>
+            <li>✅ Latvia, country-wide, 20 m</li>
+            <li>✅ Luxembourg, country-wide, 1 m</li>
+            <li>✅ Romania, partial, 0.5 m</li>
+            <li>✅ Slovakia, country-wide, 1 m</li>
+            <li>✅ Slovenia, country-wide, 0.5 m</li>
+            <li>✅ Spain, country-wide, 5 m</li>
+            <li>✅ Germany, Baden-Württemberg, 1 m</li>
+            <li>✅ Germany, Bayern, 1 m</li>
+            <li>✅ Germany, Berlin, 1 m</li>
+            <li>✅ Germany, Brandenburg, 1 m</li>
+            <li>✅ Germany, Bremen, 1 m</li>
+            <li>✅ Germany, Hamburg, 1 m</li>
+            <li>✅ Germany, Hessen, 1 m</li>
+            <li>✅ Germany, Mecklenburg-Vorpommern, 1 m</li>
+            <li>✅ Germany, Niedersachsen, 1 m</li>
+            <li>✅ Germany, Nordrhein-Westfalen, 1 m</li>
+            <li>✅ Germany, Rheinland-Pfalz, 1 m</li>
+            <li>✅ Germany, Saarland, 1 m</li>
+            <li>✅ Germany, Sachsen, 1 m</li>
+            <li>✅ Germany, Sachsen-Anhalt, 1 m</li>
+            <li>✅ Germany, Schleswig-Holstein, 1 m</li>
+            <li>✅ Germany, Thüringen, 1 m</li>
         </ul>
     </ul>
     <h4>Planned and Funded</h4>
     <ul>
         <li>◻️ High-resolution coverage accross the European Union</li>
         <ul>
-
-            <li>◻️ Belgium, Flanders, 1 m</li>
-            <li>◻️ Belgium, Wallonie, 1 m</li>
-            <li>◻️ Czech Republic, country-wide, 5 m</li>
-            <li>◻️ Denmark, country-wide, 0.5 m</li>
-            <li>◻️ Estonia, country-wide, 1 m</li>
-            <li>◻️ Finland, country-wide, 2 m</li>
-            <li>◻️ France, partial, 1 m</li>
-            <li>◻️ France, country-wide, 5 m</li>
             <li>◻️ Ireland, country-wide, 2 m</li>
-            <li>◻️ Italy, country-wide, 10 m</li>
             <li>◻️ Italy, Sardegna, 1 m</li>
             <li>◻️ Italy, Sicily, 2 m</li>
-            <li>◻️ Italy, Bozen, 2.5 m</li>
-            <li>◻️ Italy, Aosta, 0.5 m</li>
-            <li>◻️ Latvia, country-wide, 1 m</li>
-            <li>◻️ Lithuania, country-wide, 1 m</li>
-            <li>◻️ Luxembourg, country-wide, 0.5 m</li>
             <li>◻️ Netherlands, country-wide, 0.5 m</li>
             <li>◻️ Poland, country-wide, 1 m</li>
-            <li>◻️ Romania, country-wide, 5 m</li>
-            <li>◻️ Slovakia, country-wide, 5 m</li>
-            <li>◻️ Slovenia, country-wide, 5 m</li>
-            <li>◻️ Spain, country-wide, 5 m</li>
             <li>◻️ Sweden, country-wide, 1 m</li>
-            <li>◻️ Germany, Baden-Württemberg, 1 m</li>
-            <li>◻️ Germany, Bayern, 1 m</li>
-            <li>◻️ Germany, Berlin, 1 m</li>
-            <li>◻️ Germany, Brandenburg, 1 m</li>
-            <li>◻️ Germany, Bremen, 1 m</li>
-            <li>◻️ Germany, Hamburg, 1 m</li>
-            <li>◻️ Germany, Hessen, 1 m</li>
-            <li>◻️ Germany, Mecklenburg-Vorpommern, 1 m</li>
-            <li>◻️ Germany, Niedersachsen, 1 m</li>
-            <li>◻️ Germany, Nordrhein-Westfalen, 1 m</li>
-            <li>◻️ Germany, Rheinland-Pfalz, 1 m</li>
-            <li>◻️ Germany, Saarland, 1 m</li>
-            <li>◻️ Germany, Sachsen, 1 m</li>
-            <li>◻️ Germany, Sachsen-Anhalt, 1 m</li>
-            <li>◻️ Germany, Schleswig-Holstein, 1 m</li>
-            <li>◻️ Germany, Thüringen, 1 m</li>
+            <li>◻️ Lithuania, country-wide, 1 m</li>
         </ul>
     </ul>
 
