Add note about primary download server (#138)

--- a/website/data-access/index.html
+++ b/website/data-access/index.html
@@ -136,7 +136,7 @@
 
     <h2 id="mirrors">Mirrors</h2>
     <p>
-        Mapterhorn's PMTiles are available on multiple mirrors:
+        Mapterhorn's PMTiles are available on the primary download server <a href="https://download.mapterhorn.com/">https://download.mapterhorn.com/</a> and on multiple mirrors:
     </p>
 
     <p>
