spelling fixes; mention wget as a requirement (#143)

--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,7 @@
     <ul>
         <li>✅ Create a source catalog that lists available open digital elevation models and their licenses</li>
         <li>✅ Write a pipeline to aggregate digital elevation models with different resolutions</li>
-        <li>✅ Apply the pipepline to a global low-resolution and a local high-resolution dataset</li>
+        <li>✅ Apply the pipeline to a global low-resolution and a local high-resolution dataset</li>
         <li>✅ Distribute the aggregated digital elevation model as PMTiles</li>
         <li>✅ Write documentation for contributors explaining the pipeline</li>
         <li>✅ Write documentation for end-users with examples</li>
