--- a/website/viewer/index.html
+++ b/website/viewer/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <script src="https://unpkg.com/maplibre-gl@5.6.0/dist/maplibre-gl.js"></script>
     <link href="https://unpkg.com/maplibre-gl@5.6.0/dist/maplibre-gl.css" rel="stylesheet" />
+    <script src="https://unpkg.com/pmtiles@4.3.0/dist/pmtiles.js"></script>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <link rel="icon" href="https://mapterhorn.github.io/.github/brand/screen/mapterhorn-icon.png">
     <style>
@@ -15,17 +16,84 @@
         }
 
         #map {
-            position: absolute;
             top: 0;
             bottom: 0;
             width: 100%;
+            height: calc(100vh - 30px);
+        }
+
+        #form {
+            box-sizing: border-box;
+            z-index: 1;
+            background: white;
+            padding: 0.3rem;
+            width: 100vw;
+            display: flex;
+            height: 30px;
+            align-items: center;
+        }
+
+        #input {
+            flex-grow: 1;
+            margin-right: 0.5rem;
+        }
+
+        #dragInfo {
+            flex-shrink: 0;
+            font-size: 14px;
+            font-family: sans-serif;
+            color: #777;
+            margin-left: 0.5rem;
+            display: none;
+        }
+
+        @media (min-width: 640px) {
+            #dragInfo {
+                display: inline;
+            }
         }
     </style>
 </head>
 
 <body>
+    <form id="form">
+        <input id="input" type="text" placeholder="TileJSON or .pmtiles" />
+        <button type="submit">View</button>
+        <span id="dragInfo">or drag-and-drop .pmtiles</span>
+    </form>
     <div id="map"></div>
     <script type="text/javascript">
+        function parseHash(hash) {
+            const retval = {};
+            for (const pair of hash.replace('#', '').split('&')) {
+                const parts = pair.split('=');
+                retval[parts[0]] = parts[1];
+            }
+            return retval;
+        }
+
+        function createHash(currentHash, newHash) {
+            const current = parseHash(currentHash);
+            const combined = { ...current, ...newHash };
+            return `#${Object.entries(combined)
+                .filter(([_, value]) => {
+                    return value !== undefined;
+                })
+                .map(([key, value]) => {
+                    return `${key}=${value}`;
+                })
+                .join('&')}`;
+        }
+
+        let protocol = new pmtiles.Protocol();
+        maplibregl.addProtocol('pmtiles', protocol.tile);
+
+        const form = document.getElementById('form');
+        const input = document.getElementById('input');
+
+        const params = parseHash(location.hash);
+        let url = params.url || 'https://tiles.mapterhorn.com/tilejson.json';
+        document.getElementById('input').value = url;
 
         const map = new maplibregl.Map({
             container: 'map',
@@ -37,7 +105,8 @@
                 sources: {
                     hillshadeSource: {
                         type: 'raster-dem',
-                        url: 'https://tiles.mapterhorn.com/tilejson.json'
+                        url: url.endsWith('.pmtiles') ? 'pmtiles://' + url : url,
+                        encoding: 'terrarium',
                     },
                 },
                 layers: [
@@ -66,6 +135,31 @@
             }
         }
         map.addControl(new LogoControl(), 'bottom-left');
+
+        const setHashUrl = (url) => {
+            location.hash = createHash(location.hash, { url: url })
+        }
+
+        form.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const value = input.value.trim();
+            setHashUrl(value);
+            map.getSource('hillshadeSource').setUrl(value.endsWith('.pmtiles') ? 'pmtiles://' + value : value);
+        });
+
+        document.addEventListener('dragover', (e) => {
+            e.preventDefault();
+        });
+
+        document.addEventListener('drop', (e) => {
+            e.preventDefault();
+            setHashUrl();
+            document.getElementById('input').value = '';
+            const file = e.dataTransfer.files[0];
+            const archive = new pmtiles.PMTiles(new pmtiles.FileSource(file));
+            protocol.add(archive);
+            map.getSource('hillshadeSource').setUrl(`pmtiles://${file.name}`);
+        });
     </script>
 </body>
 
