--- a/pipelines/index.html
+++ b/pipelines/index.html
@@ -87,7 +87,7 @@
         }
         map.addControl(new LogoControl(), 'bottom-left');
 
-        map.showTileBoundaries = true;
+        // map.showTileBoundaries = true;
     </script>
 </body>
 
