Update homepage resolutions (#153)

--- a/website/index.html
+++ b/website/index.html
@@ -28,68 +28,55 @@
     <h3>Viewer</h3>
     <p>Explore the Mapterhorn terrain tiles at <a href="/viewer">https://mapterhorn.com/viewer</a>.</p>
 
-    <h3>Roadmap</h3>
-    <h4>Released</h4>
+    <h3>Resolutions</h3>
     <ul>
-        <li>✅ Create a source catalog that lists available open digital elevation models and their licenses</li>
-        <li>✅ Write a pipeline to aggregate digital elevation models with different resolutions</li>
-        <li>✅ Apply the pipeline to a global low-resolution and a local high-resolution dataset</li>
-        <li>✅ Distribute the aggregated digital elevation model as PMTiles</li>
-        <li>✅ Write documentation for contributors explaining the pipeline</li>
-        <li>✅ Write documentation for end-users with examples</li>
-        <li>✅ Create a website with download area selection and metadata</li>
-        <li>✅ High-resolution coverage accross the European Union</li>
-        <ul>
-            <li>✅ Austria, country-wide, 10 m</li>
-            <li>✅ Austria, Burgenland, 5 m</li>
-            <li>✅ Austria, Salzburg, 1 m</li>
-            <li>✅ Austria, Oberösterreich, 0.5 m</li>
-            <li>✅ Austria, Kärnten, 1 m</li>
-            <li>✅ Belgium, Flanders, 1 m</li>
-            <li>✅ Belgium, Wallonie, 1 m</li>
-            <li>✅ Czech Republic, country-wide, 5 m</li>
-            <li>✅ Denmark, country-wide, 0.5 m</li>
-            <li>✅ Estonia, country-wide, 1 m</li>
-            <li>✅ Finland, country-wide, 2 m</li>
-            <li>✅ France, partial, 1 m</li>
-            <li>✅ France, country-wide, 5 m</li>
-            <li>✅ Italy, country-wide, 10 m</li>
-            <li>✅ Italy, Bozen, 2.5 m</li>
-            <li>✅ Italy, Aosta, 0.5 m</li>
-            <li>✅ Latvia, country-wide, 20 m</li>
-            <li>✅ Luxembourg, country-wide, 1 m</li>
-            <li>✅ Romania, partial, 0.5 m</li>
-            <li>✅ Slovakia, country-wide, 1 m</li>
-            <li>✅ Slovenia, country-wide, 0.5 m</li>
-            <li>✅ Spain, country-wide, 5 m</li>
-            <li>✅ Germany, Baden-Württemberg, 1 m</li>
-            <li>✅ Germany, Bayern, 1 m</li>
-            <li>✅ Germany, Berlin, 1 m</li>
-            <li>✅ Germany, Brandenburg, 1 m</li>
-            <li>✅ Germany, Bremen, 1 m</li>
-            <li>✅ Germany, Hamburg, 1 m</li>
-            <li>✅ Germany, Hessen, 1 m</li>
-            <li>✅ Germany, Mecklenburg-Vorpommern, 1 m</li>
-            <li>✅ Germany, Niedersachsen, 1 m</li>
-            <li>✅ Germany, Nordrhein-Westfalen, 1 m</li>
-            <li>✅ Germany, Rheinland-Pfalz, 1 m</li>
-            <li>✅ Germany, Saarland, 1 m</li>
-            <li>✅ Germany, Sachsen, 1 m</li>
-            <li>✅ Germany, Sachsen-Anhalt, 1 m</li>
-            <li>✅ Germany, Schleswig-Holstein, 1 m</li>
-            <li>✅ Germany, Thüringen, 1 m</li>
-            <li>✅ Italy, Sardegna, 1 m</li>
-            <li>✅ Italy, Sicily, 2 m</li>
-            <li>✅ Netherlands, partial, 5 m</li>
-            <li>✅ Poland, country-wide, 1 m</li>
-            <li>✅ Sweden, country-wide, 1 m</li>
-        </ul>
-    </ul>
-
-    <h4>Under Consideration</h4>
-
-    <ul>
-        <li>◻️ Add more sources from countries with high-resolution open terrain data (not funded yet).</li>
+        <li>✅ Global, 30 m</li>
+        <li>✅ Austria, country-wide, 1 m</li>
+        <li>✅ Austria, Burgenland, 5 m</li>
+        <li>✅ Austria, Salzburg, 1 m</li>
+        <li>✅ Austria, Oberösterreich, 1 m</li>
+        <li>✅ Austria, Kärnten, 1 m</li>
+        <li>✅ Belgium, Flanders, 1 m</li>
+        <li>✅ Belgium, Wallonie, 0.5 m</li>
+        <li>✅ Czech Republic, country-wide, 5 m</li>
+        <li>✅ Denmark, country-wide, 0.4 m</li>
+        <li>✅ Estonia, country-wide, 1 m</li>
+        <li>✅ Finland, country-wide, 2 m</li>
+        <li>✅ France, partial, 1 m</li>
+        <li>✅ France, country-wide, 5 m</li>
+        <li>✅ Germany, Baden-Württemberg, 1 m</li>
+        <li>✅ Germany, Bayern, 1 m</li>
+        <li>✅ Germany, Berlin, 1 m</li>
+        <li>✅ Germany, Brandenburg, 1 m</li>
+        <li>✅ Germany, Bremen, 1 m</li>
+        <li>✅ Germany, Hamburg, 1 m</li>
+        <li>✅ Germany, Hessen, 1 m</li>
+        <li>✅ Germany, Mecklenburg-Vorpommern, 1 m</li>
+        <li>✅ Germany, Niedersachsen, 1 m</li>
+        <li>✅ Germany, Nordrhein-Westfalen, 1 m</li>
+        <li>✅ Germany, Rheinland-Pfalz, 1 m</li>
+        <li>✅ Germany, Saarland, 1 m</li>
+        <li>✅ Germany, Sachsen, 1 m</li>
+        <li>✅ Germany, Sachsen-Anhalt, 1 m</li>
+        <li>✅ Germany, Schleswig-Holstein, 1 m</li>
+        <li>✅ Germany, Thüringen, 1 m</li>
+        <li>✅ Italy, country-wide, 10 m</li>
+        <li>✅ Italy, Bozen, 2.5 m</li>
+        <li>✅ Italy, Aosta, 2 m</li>
+        <li>✅ Italy, Sardegna partial, 1 m</li>
+        <li>✅ Italy, Sicily, 2 m</li>
+        <li>✅ Latvia, country-wide, 20 m</li>
+        <li>✅ Luxembourg, country-wide, 0.5 m</li>
+        <li>✅ Netherlands, partial, 5 m</li>
+        <li>✅ Poland, country-wide, 5 m</li>
+        <li>✅ Poland, partial, 1 m</li>
+        <li>✅ Romania, partial, 0.5 m</li>
+        <li>✅ Slovakia, country-wide, 1 m</li>
+        <li>✅ Slovenia, country-wide, 0.5 m</li>
+        <li>✅ Spain, country-wide, 5 m</li>
+        <li>✅ Sweden, country-wide, 1 m</li>
+        <li>✅ Switzerland, country-wide, 2 m</li>
+        <li>✅ Switzerland, partial, 0.5 m</li>
     </ul>
 
     <h3>Code</h3>
