website: add pmtiles merge to interlaken example (#158)

--- a/website/data-access/index.html
+++ b/website/data-access/index.html
@@ -134,6 +134,14 @@
         Tip: Add the flag <code>--dry-run</code> to get the total extract size before starting the actual download.
     </p>
 
+    <p>
+        Combine the extracts into a single archive containing z0-z17:
+    </p>
+    <p>
+    <pre><code>pmtiles merge planet.pmtiles 6-33-22.pmtiles interlaken.pmtiles
+    </code></pre>
+    </p>
+
     <h2 id="mirrors">Mirrors</h2>
     <p>
         Mapterhorn's PMTiles are available on the primary download server <a href="https://download.mapterhorn.com/">https://download.mapterhorn.com/</a> and on multiple mirrors:
