--- a/website/index.html
+++ b/website/index.html
@@ -38,8 +38,11 @@
         <li>✅ Austria, Kärnten, 1 m</li>
         <li>✅ Belgium, Flanders, 1 m</li>
         <li>✅ Belgium, Wallonie, 0.5 m</li>
+        <li>✅ Cyprus, country-wide, 1 m</li>
         <li>✅ Czech Republic, country-wide, 5 m</li>
         <li>✅ Denmark, country-wide, 0.4 m</li>
+        <li>✅ Denmark, Greenland, 2 m</li>
+        <li>✅ Denmark, Faroe, 10 m</li>
         <li>✅ Estonia, country-wide, 1 m</li>
         <li>✅ Finland, country-wide, 2 m</li>
         <li>✅ France, partial, 1 m</li>
@@ -60,23 +63,35 @@
         <li>✅ Germany, Sachsen-Anhalt, 1 m</li>
         <li>✅ Germany, Schleswig-Holstein, 1 m</li>
         <li>✅ Germany, Thüringen, 1 m</li>
+        <li>✅ Iceland, country-wide, 10 m</li>
         <li>✅ Italy, country-wide, 10 m</li>
         <li>✅ Italy, Bozen, 2.5 m</li>
         <li>✅ Italy, Aosta, 2 m</li>
         <li>✅ Italy, Sardegna partial, 1 m</li>
         <li>✅ Italy, Sicily, 2 m</li>
+        <li>✅ Japan, country-wide, 1 m, 5 m, 10 m</li>
         <li>✅ Latvia, country-wide, 20 m</li>
         <li>✅ Luxembourg, country-wide, 0.5 m</li>
         <li>✅ Netherlands, partial, 5 m</li>
+        <li>✅ New Zealand, partial, 1 m</li>
+        <li>✅ Norway, country-wide, 1 m</li>
+        <li>✅ Norway, Svalbard, 20 m</li>
         <li>✅ Poland, country-wide, 5 m</li>
         <li>✅ Poland, partial, 1 m</li>
+        <li>✅ Poland, partial, 1 m</li>
+        <li>✅ Portugal, partial, 0.5 m</li>
+        <li>✅ Portugal, Madeira, 10 m</li>
         <li>✅ Romania, partial, 0.5 m</li>
         <li>✅ Slovakia, country-wide, 1 m</li>
         <li>✅ Slovenia, country-wide, 0.5 m</li>
-        <li>✅ Spain, country-wide, 5 m</li>
+        <li>✅ Spain, country-wide, 2 m</li>
         <li>✅ Sweden, country-wide, 1 m</li>
         <li>✅ Switzerland, country-wide, 2 m</li>
         <li>✅ Switzerland, partial, 0.5 m</li>
+        <li>✅ UK, England, 1 m</li>
+        <li>✅ UK, Scotland, 1 m</li>
+        <li>✅ UK, Wales, 1 m</li>
+        <li>✅ USA, country-wide, 10 m</li>
     </ul>
 
     <h3>Code</h3>
